Fix: empty partitioned tables not listed in sys.snapshots
Previously, `SysSnapshot` was constructed only by use of `SnapshotInfo`
which only contains concrete indices and not the templates. Therefore,
empty partitioned tables(no partitions -> no concrete indices) were not
listed in `sys.snapshots`.

Retrieve cluster state from the snapshot to get the templates which
list all partitioned tables and concatenate them with the tables
extracted from the concrete indices, using distinct, so that non-empty
partitioned tables are not listed twice.

Fixes: #14165
(cherry picked from commit 76886ba7159b194e7cf6cdf396b9f81a0fe2e84a)